[tool.poetry]
name = "quantum-tomography"
version = "0.1.0"
description = ""
authors = ["Hajime Fukuda <haji.fkd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.5"
qiskit = "^1.2.4"
matplotlib = "^3.9.2"
qiskit-ibm-runtime = "^0.33.2"
python-dotenv = "^1.0.1"
qiskit-aer = "^0.15.1"
numpy = "^2.1.3"
pylatexenc = "^2.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
